--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,21 +3,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b143a1b5",
+   "id": "653f2147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the workbook using openpyxl\n",
-    "file_path = 'output_with_data.xlsx'  # Update with your output file path if different\n",
-    "wb = openpyxl.load_workbook(file_path)\n",
+    "import pandas as pd\n",
+    "import openpyxl\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "from openpyxl.styles import PatternFill, Border, Side, Font\n",
+    "import openpyxl\n",
     "\n",
-    "# Process each sheet\n",
+    "# Load workbook and process each sheet\n",
+    "file_path = 'your_workbook.xlsx'\n",
+    "wb = openpyxl.load_workbook(file_path)\n",
+    "summary_rows = []\n",
+    "\n",
     "for sheet_name in wb.sheetnames:\n",
-    "    sheet = wb[sheet_name]\n",
+    "    ws = wb[sheet_name]\n",
+    "    df = pd.DataFrame(ws.values)\n",
+    "    df.columns = df.iloc[0]\n",
+    "    df = df[1:]\n",
+    "    \n",
+    "    # Creating the summary table\n",
+    "    summary = df.groupby(['Mapped L4', 'Role_temp']).agg(\n",
+    "        High_Count=('High/Low', lambda x: (x == 'High').sum()),\n",
+    "        Low_Count=('High/Low', lambda x: (x == 'Low').sum()),\n",
+    "        Total_Count=('High/Low', 'count')\n",
+    "    ).reset_index()\n",
+    "    \n",
+    "    summary['Total'] = summary['High_Count'] + summary['Low_Count']\n",
+    "    summary.loc['Total'] = summary.sum(numeric_only=True)\n",
+    "    summary.loc['Total', ['Mapped L4', 'Role_temp']] = 'Total'\n",
+    "    \n",
+    "    summary_start_row = 3\n",
+    "    for r_idx, row in enumerate(dataframe_to_rows(summary, index=False, header=True), summary_start_row):\n",
+    "        for c_idx, value in enumerate(row, 1):\n",
+    "            ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "\n",
+    "    # Appending summary data for the overall summary\n",
+    "    summary_rows.append([sheet_name] + summary.loc['Total', ['High_Count', 'Low_Count', 'Total']].tolist())\n",
+    "\n",
+    "    # Adding subtables\n",
+    "    subtable_start_row = r_idx + 2\n",
+    "    for l4_value, l4_group in df.groupby('Mapped L4'):\n",
+    "        ws.cell(row=subtable_start_row, column=1, value=l4_value)\n",
+    "        subtable_start_row += 1\n",
+    "        for role_value, role_group in l4_group.groupby('Role_temp'):\n",
+    "            ws.cell(row=subtable_start_row, column=1, value=role_value)\n",
+    "            subtable_start_row += 1\n",
+    "            for r_idx, row in enumerate(dataframe_to_rows(role_group[['Mapped L4', 'Role_temp', 'GCB level', 'FRC Code', 'Country', 'City', 'High/Low']], index=False, header=True), subtable_start_row):\n",
+    "                for c_idx, value in enumerate(row, 1):\n",
+    "                    ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "            subtable_start_row += len(role_group) + 2\n",
+    "        subtable_start_row += 3\n",
+    "\n",
+    "# Creating the overall summary sheet\n",
+    "summary_df = pd.DataFrame(summary_rows, columns=['Sheet Name', 'High Total', 'Low Total', 'Total'])\n",
+    "summary_df.loc['Total'] = summary_df[['High Total', 'Low Total', 'Total']].sum()\n",
+    "summary_df.loc['Total', 'Sheet Name'] = 'Grand Total'\n",
+    "\n",
+    "summary_ws = wb.create_sheet('Summary')\n",
+    "for r_idx, row in enumerate(dataframe_to_rows(summary_df, index=False, header=True), 1):\n",
+    "    for c_idx, value in enumerate(row, 1):\n",
+    "        summary_ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "\n",
+    "# Formatting function\n",
+    "def format_worksheet(ws, summary_start_row, summary_length, subtable_start_row, subtable_length):\n",
+    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "    border = Border(left=Side(style='thin'), right=Side(style='thin'), top=Side(style='thin'), bottom=Side(style='thin'))\n",
+    "    header_font = Font(bold=True)\n",
     "\n",
     "    # Format the summary table\n",
-    "    summary_start_row = 2  # Adjust if your summary table starts at a different row\n",
-    "    for row in sheet.iter_rows(min_row=summary_start_row, max_row=summary_start_row + len(summary_table), min_col=1, max_col=summary_table.shape[1]):\n",
+    "    for row in ws.iter_rows(min_row=summary_start_row, max_row=summary_start_row + summary_length - 1, min_col=1, max_col=4):\n",
     "        for cell in row:\n",
     "            cell.border = border\n",
     "            if cell.row == summary_start_row:\n",
@@ -25,54 +82,30 @@
     "                cell.font = header_font\n",
     "\n",
     "    # Format the sub tables\n",
-    "    subtable_start_row = summary_start_row + len(summary_table) + 3  # Adjust based on your layout\n",
-    "    while True:\n",
-    "        # Assuming the first cell in each sub table is a header\n",
-    "        header_cell = sheet.cell(row=subtable_start_row, column=1)\n",
-    "        if not header_cell.value:\n",
-    "            break  # Stop if no more sub tables\n",
-    "\n",
-    "        # Format the header row of the subtable\n",
-    "        for cell in sheet[subtable_start_row]:\n",
-    "            cell.fill = header_fill\n",
-    "            cell.font = header_font\n",
+    "    for row in ws.iter_rows(min_row=subtable_start_row, max_row=subtable_start_row + subtable_length - 1, min_col=1, max_col=7):\n",
+    "        for cell in row:\n",
     "            cell.border = border\n",
+    "            if cell.row % (len(l4_group) + 2) == subtable_start_row:\n",
+    "                cell.fill = header_fill\n",
+    "                cell.font = header_font\n",
     "\n",
-    "        # Format the subtable rows\n",
-    "        for row in sheet.iter_rows(min_row=subtable_start_row + 1, max_row=subtable_start_row + len(subtable), min_col=1, max_col=subtable.shape[1]):\n",
-    "            for cell in row:\n",
-    "                cell.border = border\n",
+    "# Apply formatting to each sheet\n",
+    "for sheet_name in wb.sheetnames:\n",
+    "    if sheet_name != 'Summary':\n",
+    "        ws = wb[sheet_name]\n",
+    "        format_worksheet(ws, 3, len(summary), summary_start_row + len(summary) + 2, subtable_start_row - (summary_start_row + len(summary) + 2))\n",
     "\n",
-    "        # Move to the next subtable\n",
-    "        subtable_start_row += len(subtable) + 3  # Adjust for blank rows\n",
+    "# Apply formatting to the summary sheet\n",
+    "format_worksheet(summary_ws, 1, len(summary_df), 0, 0)\n",
     "\n",
-    "# Save the updated workbook with formatting\n",
-    "output_file_path = 'output_file_with_summary_and_formatting.xlsx'\n",
-    "wb.save(output_file_path)\n",
-    "\n",
-    "print(f\"Formatted data has been written to '{output_file_path}'.\")\n",
-    "################\n",
-    "# Format the complete summary sheet\n",
-    "summary_sheet = wb['Complete Summary']\n",
-    "\n",
-    "for row in summary_sheet.iter_rows(min_row=1, max_row=summary_df.shape[0] + 1, min_col=1, max_col=summary_df.shape[1]):\n",
-    "    for cell in row:\n",
-    "        cell.border = border\n",
-    "        if cell.row == 1:\n",
-    "            cell.fill = header_fill\n",
-    "            cell.font = header_font\n",
-    "\n",
-    "# Save the final workbook with all formatting\n",
-    "output_file_path = 'final_output_with_formatting.xlsx'\n",
-    "wb.save(output_file_path)\n",
-    "\n",
-    "print(f\"Final formatted workbook has been saved as '{output_file_path}'.\")\n"
+    "# Save the workbook\n",
+    "wb.save('formatted_workbook.xlsx')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff007e86",
+   "id": "ea0aaa60",
    "metadata": {},
    "outputs": [],
    "source": [
