--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653f2147",
+   "id": "1d0a4697",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,68 +11,28 @@
     "import openpyxl\n",
     "from openpyxl.utils.dataframe import dataframe_to_rows\n",
     "from openpyxl.styles import PatternFill, Border, Side, Font\n",
-    "import openpyxl\n",
     "\n",
-    "# Load workbook and process each sheet\n",
+    "# Load workbook\n",
     "file_path = 'your_workbook.xlsx'\n",
     "wb = openpyxl.load_workbook(file_path)\n",
     "summary_rows = []\n",
     "\n",
-    "for sheet_name in wb.sheetnames:\n",
-    "    ws = wb[sheet_name]\n",
-    "    df = pd.DataFrame(ws.values)\n",
-    "    df.columns = df.iloc[0]\n",
-    "    df = df[1:]\n",
-    "    \n",
-    "    # Creating the summary table\n",
-    "    summary = df.groupby(['Mapped L4', 'Role_temp']).agg(\n",
-    "        High_Count=('High/Low', lambda x: (x == 'High').sum()),\n",
-    "        Low_Count=('High/Low', lambda x: (x == 'Low').sum()),\n",
-    "        Total_Count=('High/Low', 'count')\n",
-    "    ).reset_index()\n",
-    "    \n",
-    "    summary['Total'] = summary['High_Count'] + summary['Low_Count']\n",
-    "    summary.loc['Total'] = summary.sum(numeric_only=True)\n",
-    "    summary.loc['Total', ['Mapped L4', 'Role_temp']] = 'Total'\n",
-    "    \n",
-    "    summary_start_row = 3\n",
-    "    for r_idx, row in enumerate(dataframe_to_rows(summary, index=False, header=True), summary_start_row):\n",
-    "        for c_idx, value in enumerate(row, 1):\n",
-    "            ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "# Define formatting styles\n",
+    "header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "border = Border(left=Side(style='thin'), right=Side(style='thin'), top=Side(style='thin'), bottom=Side(style='thin'))\n",
+    "header_font = Font(bold=True)\n",
     "\n",
-    "    # Appending summary data for the overall summary\n",
-    "    summary_rows.append([sheet_name] + summary.loc['Total', ['High_Count', 'Low_Count', 'Total']].tolist())\n",
+    "def clear_sheet(ws):\n",
+    "    \"\"\"Clear the sheet's existing data and formatting.\"\"\"\n",
+    "    for row in ws.iter_rows():\n",
+    "        for cell in row:\n",
+    "            cell.value = None\n",
+    "            cell.fill = PatternFill()\n",
+    "            cell.border = Border()\n",
+    "            cell.font = Font()\n",
     "\n",
-    "    # Adding subtables\n",
-    "    subtable_start_row = r_idx + 2\n",
-    "    for l4_value, l4_group in df.groupby('Mapped L4'):\n",
-    "        ws.cell(row=subtable_start_row, column=1, value=l4_value)\n",
-    "        subtable_start_row += 1\n",
-    "        for role_value, role_group in l4_group.groupby('Role_temp'):\n",
-    "            ws.cell(row=subtable_start_row, column=1, value=role_value)\n",
-    "            subtable_start_row += 1\n",
-    "            for r_idx, row in enumerate(dataframe_to_rows(role_group[['Mapped L4', 'Role_temp', 'GCB level', 'FRC Code', 'Country', 'City', 'High/Low']], index=False, header=True), subtable_start_row):\n",
-    "                for c_idx, value in enumerate(row, 1):\n",
-    "                    ws.cell(row=r_idx, column=c_idx, value=value)\n",
-    "            subtable_start_row += len(role_group) + 2\n",
-    "        subtable_start_row += 3\n",
-    "\n",
-    "# Creating the overall summary sheet\n",
-    "summary_df = pd.DataFrame(summary_rows, columns=['Sheet Name', 'High Total', 'Low Total', 'Total'])\n",
-    "summary_df.loc['Total'] = summary_df[['High Total', 'Low Total', 'Total']].sum()\n",
-    "summary_df.loc['Total', 'Sheet Name'] = 'Grand Total'\n",
-    "\n",
-    "summary_ws = wb.create_sheet('Summary')\n",
-    "for r_idx, row in enumerate(dataframe_to_rows(summary_df, index=False, header=True), 1):\n",
-    "    for c_idx, value in enumerate(row, 1):\n",
-    "        summary_ws.cell(row=r_idx, column=c_idx, value=value)\n",
-    "\n",
-    "# Formatting function\n",
     "def format_worksheet(ws, summary_start_row, summary_length, subtable_start_row, subtable_length):\n",
-    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
-    "    border = Border(left=Side(style='thin'), right=Side(style='thin'), top=Side(style='thin'), bottom=Side(style='thin'))\n",
-    "    header_font = Font(bold=True)\n",
-    "\n",
+    "    \"\"\"Apply formatting to the worksheet.\"\"\"\n",
     "    # Format the summary table\n",
     "    for row in ws.iter_rows(min_row=summary_start_row, max_row=summary_start_row + summary_length - 1, min_col=1, max_col=4):\n",
     "        for cell in row:\n",
@@ -89,14 +49,73 @@
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
     "\n",
-    "# Apply formatting to each sheet\n",
+    "    # Set column width for column I\n",
+    "    ws.column_dimensions['I'].width = 75\n",
+    "\n",
+    "# Process each sheet\n",
     "for sheet_name in wb.sheetnames:\n",
-    "    if sheet_name != 'Summary':\n",
-    "        ws = wb[sheet_name]\n",
-    "        format_worksheet(ws, 3, len(summary), summary_start_row + len(summary) + 2, subtable_start_row - (summary_start_row + len(summary) + 2))\n",
+    "    ws = wb[sheet_name]\n",
+    "    \n",
+    "    # Convert sheet to DataFrame\n",
+    "    df = pd.DataFrame(ws.values)\n",
+    "    df.columns = df.iloc[0]\n",
+    "    df = df[1:]\n",
+    "    \n",
+    "    # Clear existing data and formatting\n",
+    "    clear_sheet(ws)\n",
+    "\n",
+    "    # Creating the summary table\n",
+    "    summary = df.groupby(['Mapped L4', 'Role_temp']).agg(\n",
+    "        High_Count=('High/Low', lambda x: (x == 'High').sum()),\n",
+    "        Low_Count=('High/Low', lambda x: (x == 'Low').sum()),\n",
+    "        Total_Count=('High/Low', 'count')\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    summary['Total'] = summary['High_Count'] + summary['Low_Count']\n",
+    "    summary.loc['Total'] = summary.sum(numeric_only=True)\n",
+    "    summary.loc['Total', ['Mapped L4', 'Role_temp']] = 'Total'\n",
+    "\n",
+    "    # Write \"Summary\" heading\n",
+    "    ws.cell(row=2, column=1, value=\"Summary\")\n",
+    "    \n",
+    "    # Write summary table\n",
+    "    summary_start_row = 3\n",
+    "    for r_idx, row in enumerate(dataframe_to_rows(summary, index=False, header=True), summary_start_row):\n",
+    "        for c_idx, value in enumerate(row, 1):\n",
+    "            ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "\n",
+    "    # Appending summary data for the overall summary\n",
+    "    summary_rows.append([sheet_name] + summary.loc['Total', ['High_Count', 'Low_Count', 'Total']].tolist())\n",
+    "\n",
+    "    # Adding subtables\n",
+    "    subtable_start_row = summary_start_row + len(summary) + 2\n",
+    "    for l4_value, l4_group in df.groupby('Mapped L4'):\n",
+    "        ws.cell(row=subtable_start_row, column=1, value=l4_value)\n",
+    "        subtable_start_row += 1\n",
+    "        for role_value, role_group in l4_group.groupby('Role_temp'):\n",
+    "            ws.cell(row=subtable_start_row, column=1, value=role_value)\n",
+    "            subtable_start_row += 1\n",
+    "            for r_idx, row in enumerate(dataframe_to_rows(role_group[['Mapped L4', 'Role_temp', 'GCB level', 'FRC Code', 'Country', 'City', 'High/Low']], index=False, header=True), subtable_start_row):\n",
+    "                for c_idx, value in enumerate(row, 1):\n",
+    "                    ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "            subtable_start_row += len(role_group) + 2\n",
+    "        subtable_start_row += 3\n",
+    "\n",
+    "    # Format the sheet\n",
+    "    format_worksheet(ws, summary_start_row, len(summary) + 1, summary_start_row + len(summary) + 2, subtable_start_row - (summary_start_row + len(summary) + 2))\n",
+    "\n",
+    "# Creating the overall summary sheet\n",
+    "summary_df = pd.DataFrame(summary_rows, columns=['Sheet Name', 'High Total', 'Low Total', 'Total'])\n",
+    "summary_df.loc['Total'] = summary_df[['High Total', 'Low Total', 'Total']].sum()\n",
+    "summary_df.loc['Total', 'Sheet Name'] = 'Grand Total'\n",
+    "\n",
+    "summary_ws = wb.create_sheet('Summary')\n",
+    "for r_idx, row in enumerate(dataframe_to_rows(summary_df, index=False, header=True), 1):\n",
+    "    for c_idx, value in enumerate(row, 1):\n",
+    "        summary_ws.cell(row=r_idx, column=c_idx, value=value)\n",
     "\n",
     "# Apply formatting to the summary sheet\n",
-    "format_worksheet(summary_ws, 1, len(summary_df), 0, 0)\n",
+    "format_worksheet(summary_ws, 1, len(summary_df) + 1, 0, 0)\n",
     "\n",
     "# Save the workbook\n",
     "wb.save('formatted_workbook.xlsx')\n"
@@ -105,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea0aaa60",
+   "id": "e4121f2b",
    "metadata": {},
    "outputs": [],
    "source": [
