--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d0a4697",
+   "id": "8216114e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,18 @@
     "            if cell.row == summary_start_row:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
+    "            if cell.column == 4 or cell.row == summary_start_row:\n",
+    "                cell.fill = header_fill\n",
+    "                cell.font = header_font\n",
     "\n",
     "    # Format the sub tables\n",
     "    for row in ws.iter_rows(min_row=subtable_start_row, max_row=subtable_start_row + subtable_length - 1, min_col=1, max_col=7):\n",
     "        for cell in row:\n",
     "            cell.border = border\n",
     "            if cell.row % (len(l4_group) + 2) == subtable_start_row:\n",
+    "                cell.fill = header_fill\n",
+    "                cell.font = header_font\n",
+    "            elif cell.column == 1 or cell.column == 2:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
     "\n",
@@ -124,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4121f2b",
+   "id": "5a8ebbb3",
    "metadata": {},
    "outputs": [],
    "source": [
