--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8216114e",
+   "id": "6a5d2f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,32 +31,23 @@
     "            cell.border = Border()\n",
     "            cell.font = Font()\n",
     "\n",
-    "def format_worksheet(ws, summary_start_row, summary_length, subtable_start_row, subtable_length):\n",
-    "    \"\"\"Apply formatting to the worksheet.\"\"\"\n",
-    "    # Format the summary table\n",
-    "    for row in ws.iter_rows(min_row=summary_start_row, max_row=summary_start_row + summary_length - 1, min_col=1, max_col=4):\n",
+    "def format_summary_table(ws, start_row, start_col, rows, cols):\n",
+    "    \"\"\"Format the summary table.\"\"\"\n",
+    "    for row in ws.iter_rows(min_row=start_row, max_row=start_row + rows - 1, min_col=start_col, max_col=start_col + cols - 1):\n",
     "        for cell in row:\n",
     "            cell.border = border\n",
-    "            if cell.row == summary_start_row:\n",
-    "                cell.fill = header_fill\n",
-    "                cell.font = header_font\n",
-    "            if cell.column == 4 or cell.row == summary_start_row:\n",
+    "            if cell.row == start_row or cell.column == start_col + cols:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
     "\n",
-    "    # Format the sub tables\n",
-    "    for row in ws.iter_rows(min_row=subtable_start_row, max_row=subtable_start_row + subtable_length - 1, min_col=1, max_col=7):\n",
+    "def format_subtable(ws, start_row, start_col, rows, cols):\n",
+    "    \"\"\"Format a subtable.\"\"\"\n",
+    "    for row in ws.iter_rows(min_row=start_row, max_row=start_row + rows - 1, min_col=start_col, max_col=start_col + cols - 1):\n",
     "        for cell in row:\n",
     "            cell.border = border\n",
-    "            if cell.row % (len(l4_group) + 2) == subtable_start_row:\n",
+    "            if cell.row == start_row:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
-    "            elif cell.column == 1 or cell.column == 2:\n",
-    "                cell.fill = header_fill\n",
-    "                cell.font = header_font\n",
-    "\n",
-    "    # Set column width for column I\n",
-    "    ws.column_dimensions['I'].width = 75\n",
     "\n",
     "# Process each sheet\n",
     "for sheet_name in wb.sheetnames:\n",
@@ -93,6 +84,9 @@
     "    # Appending summary data for the overall summary\n",
     "    summary_rows.append([sheet_name] + summary.loc['Total', ['High_Count', 'Low_Count', 'Total']].tolist())\n",
     "\n",
+    "    # Format the summary table\n",
+    "    format_summary_table(ws, summary_start_row, 1, len(summary) + 1, 4)\n",
+    "\n",
     "    # Adding subtables\n",
     "    subtable_start_row = summary_start_row + len(summary) + 2\n",
     "    for l4_value, l4_group in df.groupby('Mapped L4'):\n",
@@ -104,11 +98,12 @@
     "            for r_idx, row in enumerate(dataframe_to_rows(role_group[['Mapped L4', 'Role_temp', 'GCB level', 'FRC Code', 'Country', 'City', 'High/Low']], index=False, header=True), subtable_start_row):\n",
     "                for c_idx, value in enumerate(row, 1):\n",
     "                    ws.cell(row=r_idx, column=c_idx, value=value)\n",
+    "            format_subtable(ws, subtable_start_row, 1, len(role_group) + 1, 7)\n",
     "            subtable_start_row += len(role_group) + 2\n",
     "        subtable_start_row += 3\n",
     "\n",
-    "    # Format the sheet\n",
-    "    format_worksheet(ws, summary_start_row, len(summary) + 1, summary_start_row + len(summary) + 2, subtable_start_row - (summary_start_row + len(summary) + 2))\n",
+    "    # Set column width for column I\n",
+    "    ws.column_dimensions['I'].width = 75\n",
     "\n",
     "# Creating the overall summary sheet\n",
     "summary_df = pd.DataFrame(summary_rows, columns=['Sheet Name', 'High Total', 'Low Total', 'Total'])\n",
@@ -120,8 +115,8 @@
     "    for c_idx, value in enumerate(row, 1):\n",
     "        summary_ws.cell(row=r_idx, column=c_idx, value=value)\n",
     "\n",
-    "# Apply formatting to the summary sheet\n",
-    "format_worksheet(summary_ws, 1, len(summary_df) + 1, 0, 0)\n",
+    "# Apply formatting to the overall summary sheet\n",
+    "format_summary_table(summary_ws, 1, 1, len(summary_df) + 1, 4)\n",
     "\n",
     "# Save the workbook\n",
     "wb.save('formatted_workbook.xlsx')\n"
@@ -130,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8ebbb3",
+   "id": "56b0bb5a",
    "metadata": {},
    "outputs": [],
    "source": [
