--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a5d2f5d",
+   "id": "4db0e664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,8 @@
     "            cell.border = Border()\n",
     "            cell.font = Font()\n",
     "\n",
-    "def format_summary_table(ws, start_row, start_col, rows, cols):\n",
-    "    \"\"\"Format the summary table.\"\"\"\n",
-    "    for row in ws.iter_rows(min_row=start_row, max_row=start_row + rows - 1, min_col=start_col, max_col=start_col + cols - 1):\n",
-    "        for cell in row:\n",
-    "            cell.border = border\n",
-    "            if cell.row == start_row or cell.column == start_col + cols:\n",
-    "                cell.fill = header_fill\n",
-    "                cell.font = header_font\n",
-    "\n",
-    "def format_subtable(ws, start_row, start_col, rows, cols):\n",
-    "    \"\"\"Format a subtable.\"\"\"\n",
+    "def format_table(ws, start_row, start_col, rows, cols):\n",
+    "    \"\"\"Format a table.\"\"\"\n",
     "    for row in ws.iter_rows(min_row=start_row, max_row=start_row + rows - 1, min_col=start_col, max_col=start_col + cols - 1):\n",
     "        for cell in row:\n",
     "            cell.border = border\n",
@@ -65,7 +56,6 @@
     "    summary = df.groupby(['Mapped L4', 'Role_temp']).agg(\n",
     "        High_Count=('High/Low', lambda x: (x == 'High').sum()),\n",
     "        Low_Count=('High/Low', lambda x: (x == 'Low').sum()),\n",
-    "        Total_Count=('High/Low', 'count')\n",
     "    ).reset_index()\n",
     "\n",
     "    summary['Total'] = summary['High_Count'] + summary['Low_Count']\n",
@@ -85,7 +75,7 @@
     "    summary_rows.append([sheet_name] + summary.loc['Total', ['High_Count', 'Low_Count', 'Total']].tolist())\n",
     "\n",
     "    # Format the summary table\n",
-    "    format_summary_table(ws, summary_start_row, 1, len(summary) + 1, 4)\n",
+    "    format_table(ws, summary_start_row, 1, len(summary) + 1, 4)\n",
     "\n",
     "    # Adding subtables\n",
     "    subtable_start_row = summary_start_row + len(summary) + 2\n",
@@ -98,7 +88,7 @@
     "            for r_idx, row in enumerate(dataframe_to_rows(role_group[['Mapped L4', 'Role_temp', 'GCB level', 'FRC Code', 'Country', 'City', 'High/Low']], index=False, header=True), subtable_start_row):\n",
     "                for c_idx, value in enumerate(row, 1):\n",
     "                    ws.cell(row=r_idx, column=c_idx, value=value)\n",
-    "            format_subtable(ws, subtable_start_row, 1, len(role_group) + 1, 7)\n",
+    "            format_table(ws, subtable_start_row, 1, len(role_group) + 1, 7)\n",
     "            subtable_start_row += len(role_group) + 2\n",
     "        subtable_start_row += 3\n",
     "\n",
@@ -116,7 +106,7 @@
     "        summary_ws.cell(row=r_idx, column=c_idx, value=value)\n",
     "\n",
     "# Apply formatting to the overall summary sheet\n",
-    "format_summary_table(summary_ws, 1, 1, len(summary_df) + 1, 4)\n",
+    "format_table(summary_ws, 1, 1, len(summary_df) + 1, 4)\n",
     "\n",
     "# Save the workbook\n",
     "wb.save('formatted_workbook.xlsx')\n"
@@ -125,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b0bb5a",
+   "id": "ce03f6a2",
    "metadata": {},
    "outputs": [],
    "source": [
