--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4db0e664",
+   "id": "47fa6fa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,8 @@
     "header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
     "border = Border(left=Side(style='thin'), right=Side(style='thin'), top=Side(style='thin'), bottom=Side(style='thin'))\n",
     "header_font = Font(bold=True)\n",
+    "subtable_header_fill = PatternFill(start_color=\"90EE90\", end_color=\"90EE90\", fill_type=\"solid\")  # Light green\n",
+    "subtable_header_font = Font(bold=True)\n",
     "\n",
     "def clear_sheet(ws):\n",
     "    \"\"\"Clear the sheet's existing data and formatting.\"\"\"\n",
@@ -39,6 +41,12 @@
     "            if cell.row == start_row:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
+    "\n",
+    "def format_subtable_header(ws, row, col):\n",
+    "    \"\"\"Format subtable header.\"\"\"\n",
+    "    cell = ws.cell(row=row, column=col)\n",
+    "    cell.fill = subtable_header_fill\n",
+    "    cell.font = subtable_header_font\n",
     "\n",
     "# Process each sheet\n",
     "for sheet_name in wb.sheetnames:\n",
@@ -80,10 +88,14 @@
     "    # Adding subtables\n",
     "    subtable_start_row = summary_start_row + len(summary) + 2\n",
     "    for l4_value, l4_group in df.groupby('Mapped L4'):\n",
+    "        # Write Mapped L4 heading\n",
     "        ws.cell(row=subtable_start_row, column=1, value=l4_value)\n",
+    "        format_subtable_header(ws, subtable_start_row, 1)\n",
     "        subtable_start_row += 1\n",
     "        for role_value, role_group in l4_group.groupby('Role_temp'):\n",
+    "            # Write Role_temp heading\n",
     "            ws.cell(row=subtable_start_row, column=1, value=role_value)\n",
+    "            format_subtable_header(ws, subtable_start_row, 1)\n",
     "            subtable_start_row += 1\n",
     "            for r_idx, row in enumerate(dataframe_to_rows(role_group[['Mapped L4', 'Role_temp', 'GCB level', 'FRC Code', 'Country', 'City', 'High/Low']], index=False, header=True), subtable_start_row):\n",
     "                for c_idx, value in enumerate(row, 1):\n",
@@ -108,6 +120,19 @@
     "# Apply formatting to the overall summary sheet\n",
     "format_table(summary_ws, 1, 1, len(summary_df) + 1, 4)\n",
     "\n",
+    "# Apply formatting to the \"Total\" column headers in summary tables of all sheets\n",
+    "for sheet_name in wb.sheetnames:\n",
+    "    if sheet_name == 'Summary':\n",
+    "        continue\n",
+    "    ws = wb[sheet_name]\n",
+    "    max_row = ws.max_row\n",
+    "    max_col = ws.max_column\n",
+    "    for row in ws.iter_rows(min_row=3, max_row=3, min_col=1, max_col=max_col):\n",
+    "        for cell in row:\n",
+    "            if cell.value in ['Total', 'High_Count', 'Low_Count']:\n",
+    "                cell.fill = header_fill\n",
+    "                cell.font = header_font\n",
+    "\n",
     "# Save the workbook\n",
     "wb.save('formatted_workbook.xlsx')\n"
    ]
@@ -115,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce03f6a2",
+   "id": "1b5fbb9f",
    "metadata": {},
    "outputs": [],
    "source": [
