--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fa6fa0",
+   "id": "9294026f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +132,7 @@
     "            if cell.value in ['Total', 'High_Count', 'Low_Count']:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
+    "                cell.border = border  # Ensure the border is applied\n",
     "\n",
     "# Save the workbook\n",
     "wb.save('formatted_workbook.xlsx')\n"
@@ -140,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b5fbb9f",
+   "id": "83767f45",
    "metadata": {},
    "outputs": [],
    "source": [
