--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,6 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9384a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the workbook\n",
+    "wb = openpyxl.load_workbook('your_file.xlsx')\n",
+    "sheet = wb['Forecast']\n",
+    "\n",
+    "# Load the sheet into a pandas dataframe\n",
+    "df = pd.read_excel('your_file.xlsx', sheet_name='Forecast')\n",
+    "\n",
+    "# Identify blank rows\n",
+    "blank_rows = df.isnull().all(axis=1)\n",
+    "\n",
+    "# Get the indices of blank rows\n",
+    "blank_row_indices = blank_rows[blank_rows == True].index.tolist()\n",
+    "\n",
+    "# Delete the blank rows in bulk\n",
+    "sheet.delete_rows(blank_row_indices[0] + 1, len(blank_row_indices))\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save('your_file.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9294026f",
    "metadata": {},
    "outputs": [],
