--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,28 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9384a50",
+   "id": "95b2418d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openpyxl\n",
-    "import pandas as pd\n",
     "\n",
     "# Load the workbook\n",
     "wb = openpyxl.load_workbook('your_file.xlsx')\n",
     "sheet = wb['Forecast']\n",
     "\n",
-    "# Load the sheet into a pandas dataframe\n",
-    "df = pd.read_excel('your_file.xlsx', sheet_name='Forecast')\n",
+    "# Get the maximum row and column\n",
+    "max_row = sheet.max_row\n",
+    "max_col = sheet.max_column\n",
     "\n",
-    "# Identify blank rows\n",
-    "blank_rows = df.isnull().all(axis=1)\n",
+    "# Create a list to store the row indices to delete\n",
+    "rows_to_delete = []\n",
     "\n",
-    "# Get the indices of blank rows\n",
-    "blank_row_indices = blank_rows[blank_rows == True].index.tolist()\n",
+    "# Iterate over the rows\n",
+    "for row in range(1, max_row + 1):\n",
+    "    # Check if all cells in the row are blank\n",
+    "    if all(cell.value is None for cell in sheet[row]):\n",
+    "        rows_to_delete.append(row)\n",
     "\n",
-    "# Delete the blank rows in bulk\n",
-    "sheet.delete_rows(blank_row_indices[0] + 1, len(blank_row_indices))\n",
+    "# Delete the rows in reverse order\n",
+    "for row in sorted(rows_to_delete, reverse=True):\n",
+    "    sheet.delete_rows(row)\n",
     "\n",
     "# Save the workbook\n",
     "wb.save('your_file.xlsx')"
