--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95b2418d",
+   "id": "3477fd25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Certainly! Here are the formal statements you can use to prompt users at various stages of the process:\n",
+    "\n",
+    "    Files Uploaded Successfully:\n",
+    "    \"Files have been uploaded successfully.\"\n",
+    "\n",
+    "    Processing:\n",
+    "    \"Please wait while the process completes.\"\n",
+    "\n",
+    "    Third Party Data File Processing:\n",
+    "    \"Third-party data file processing completed.\"\n",
+    "\n",
+    "    Looking for Position Changes:\n",
+    "    \"Looking for changes in positions (i.e., Position IDs).\"\n",
+    "\n",
+    "    Leavers Identified:\n",
+    "    \"Leavers have been identified.\"\n",
+    "\n",
+    "    Finalizing Position Changes:\n",
+    "    \"Position changes have been finalized.\"\n",
+    "\n",
+    "    Processing Issues/Risks/Controls/EUC and TPEM Items:\n",
+    "    \"Processing and identifying issues, risks, controls, EUC, and TPEM items.\"\n",
+    "\n",
+    "    Staff IDs Identified:\n",
+    "    \"Staff IDs have been identified successfully.\"\n",
+    "\n",
+    "    Mapping Leavers and Position Changers with Data Taggings:\n",
+    "    \"Mapping leavers and position changers with corresponding data taggings from step 6.\"\n",
+    "\n",
+    "    Looking for Functional Managers Data:\n",
+    "    \"Looking for respective functional managers' data (i.e., finding corresponding managers of leavers and position changers).\"\n",
+    "\n",
+    "    Preparing Final Dataset:\n",
+    "    \"Preparing the final dataset.\"\n",
+    "\n",
+    "    Organizing Data in Separate Sheets:\n",
+    "    \"Organizing data as required in separate sheets.\"\n",
+    "\n",
+    "    Completion:\n",
+    "    \"Done. Check the output in the output folder. Thank you.\"\n",
+    "\n",
+    "These statements should provide clear and concise updates to the users about the progress of the processing steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0541e58b",
    "metadata": {},
    "outputs": [],
    "source": [
