--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,124 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "a36d374c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, messagebox\n",
+    "\n",
+    "def select_file(index):\n",
+    "    # Open file dialog to select a file\n",
+    "    file_path = filedialog.askopenfilename(title=\"Select a File\", filetypes=[(\"All Files\", \"*.*\")])\n",
+    "    \n",
+    "    if file_path:  # If a file is selected\n",
+    "        selected_files[index] = file_path  # Save the selected file\n",
+    "        labels[index].config(text=file_path)  # Update label with the file path\n",
+    "\n",
+    "def confirm_selection():\n",
+    "    # Check how many files have been selected\n",
+    "    num_selected = sum(1 for file in selected_files if file)\n",
+    "    \n",
+    "    if num_selected == 0:\n",
+    "        messagebox.showwarning(\"Warning\", \"No files selected.\")\n",
+    "    else:\n",
+    "        # Show confirmation dialog with options to Confirm or Select More Files\n",
+    "        result = messagebox.askquestion(\"Confirmation\", f\"You have selected {num_selected} files. Do you want to proceed?\", icon='question')\n",
+    "        \n",
+    "        if result == 'yes':\n",
+    "            # Proceed and close the application\n",
+    "            messagebox.showinfo(\"Proceed\", \"Files are selected. Proceeding with the application.\")\n",
+    "            root.destroy()\n",
+    "        else:\n",
+    "            # Allow the user to select more files\n",
+    "            messagebox.showinfo(\"Select More\", \"Please select more files.\")\n",
+    "\n",
+    "# Initialize the Tkinter window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"File Selector\")\n",
+    "\n",
+    "# List to hold selected file paths\n",
+    "selected_files = [None] * 8\n",
+    "labels = []\n",
+    "\n",
+    "# Create labels and buttons for selecting files\n",
+    "for i in range(8):\n",
+    "    # Create a label for each file selection\n",
+    "    label = tk.Label(root, text=f\"File {i+1}: Not selected\", width=100, anchor='w')\n",
+    "    label.grid(row=i, column=0, padx=10, pady=5)\n",
+    "    labels.append(label)\n",
+    "    \n",
+    "    # Create a button for each file selection\n",
+    "    button = tk.Button(root, text=\"Select File\", command=lambda index=i: select_file(index))\n",
+    "    button.grid(row=i, column=1, padx=10, pady=5)\n",
+    "\n",
+    "# Button to confirm file selections\n",
+    "confirm_button = tk.Button(root, text=\"Confirm Selection\", command=confirm_selection)\n",
+    "confirm_button.grid(row=8, column=0, columnspan=2, pady=20)\n",
+    "\n",
+    "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "524d404a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, messagebox\n",
+    "\n",
+    "def select_files():\n",
+    "    # Open the file dialog to select files\n",
+    "    file_paths = filedialog.askopenfilenames(title=\"Select Files\", filetypes=[(\"All Files\", \"*.*\")])\n",
+    "    \n",
+    "    # Update the listbox with selected files\n",
+    "    listbox.delete(0, tk.END)\n",
+    "    for file in file_paths:\n",
+    "        listbox.insert(tk.END, file)\n",
+    "    \n",
+    "    # Save the selected files to the global variable\n",
+    "    selected_files.clear()\n",
+    "    selected_files.extend(file_paths)\n",
+    "    \n",
+    "    # Confirm the number of selected files\n",
+    "    if len(selected_files) == 0:\n",
+    "        messagebox.showinfo(\"Information\", \"No files selected.\")\n",
+    "    else:\n",
+    "        messagebox.showinfo(\"Information\", f\"You have selected {len(selected_files)} files.\")\n",
+    "\n",
+    "def confirm_selection():\n",
+    "    # Proceed with the application logic\n",
+    "    if len(selected_files) > 0:\n",
+    "        messagebox.showinfo(\"Proceed\", \"Files are selected. Proceeding with the application.\")\n",
+    "    else:\n",
+    "        messagebox.showwarning(\"Warning\", \"No files selected. Proceeding with the application.\")\n",
+    "\n",
+    "# Initialize the Tkinter window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"File Selector\")\n",
+    "\n",
+    "selected_files = []\n",
+    "\n",
+    "# Create a Listbox to display selected files\n",
+    "listbox = tk.Listbox(root, width=100, height=10)\n",
+    "listbox.pack(pady=10)\n",
+    "\n",
+    "# Add buttons to select files and confirm selection\n",
+    "select_button = tk.Button(root, text=\"Select Files\", command=select_files)\n",
+    "select_button.pack(pady=5)\n",
+    "\n",
+    "confirm_button = tk.Button(root, text=\"Confirm Selection\", command=confirm_selection)\n",
+    "confirm_button.pack(pady=5)\n",
+    "\n",
+    "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "f41a6afe",
    "metadata": {},
